# catlang

./: Cargo.toml  Makefile  README.md  io_test
scripts/: 8bit_test.cat  code.cat  hello.txt  io_test.cat  output  output.asm  test.meow
src/: ast.rs  expressions.rs  lexer.rs  main.rs  options.rs  parser.rs
src/ast/: expressions.rs  mod.rs
src/code_generation/: mod.rs  registers.rs
src/codegen/: expressions.rs  macros.rs  mod.rs  registers.rs
src/parser/: expressions.rs  mod.rs
