[package]
name = "catlang"
version = "0.1.0"
edition = "2021"

# this cuts down the binary size from 5 mb to 300 kb O_O
[profile.release]
opt-level = 3     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*


[dependencies]
